--- a/last-pass/package.json
+++ b/last-pass/package.json
@@ -16,6 +16,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.54.4",
